Minor Sass formatting fixes

--- a/sass/woocommerce/_quickview.scss
+++ b/sass/woocommerce/_quickview.scss
@@ -1,9 +1,9 @@
-// Styling the quickview button.
+// Styling the Quick View button.
 a.product-quick-view-button {
 	margin-right: 1px;
 }
 
-// Styling the quickview modal.
+// Styling the Quick View modal.
 #quick-view-container {
 	background: rgba(0,0,0,.5);
 	bottom: 0;
@@ -39,13 +39,13 @@ a.product-quick-view-button {
 	}
 
 	.quickview-close-icon {
+		color: rgba(0, 0, 0, 0.5);
+		cursor: pointer;
+		font-size: 30px;
+		line-height: 0.5;
 		position: absolute;
 		right: 20px;
 		top: 20px;
-		line-height: 0.5;
-		color: rgba(0,0,0,0.5);
-		font-size: 30px;
-		cursor: pointer;
 		@include transform( rotate(45deg) );
 	}
 
@@ -91,18 +91,18 @@ a.product-quick-view-button {
 					.flex-next {
 						right: 0;
 					}
-				}					
+				}
 
 				li {
 					padding: 0;
-				}					
+				}
 
 				a {
 					height: 50px;
-					top: 49.166%;
 					margin-top: -25px;
+					top: 49.166%;
 					width: 40px;
-					
+
 					&:before {
 						background: none;
 						content: "";
@@ -110,7 +110,7 @@ a.product-quick-view-button {
 						opacity: 0;
 						padding: 0;
 						width: 40px;
-					}					
+					}
 
 					&.flex-prev:before {
 						background-color: rgba(0, 0, 0, .4);
@@ -127,22 +127,22 @@ a.product-quick-view-button {
 						background-repeat: no-repeat;
 						opacity: 1;
 					}
-				}						
+				}
 			}
 
 			.flex-direction-nav .flex-prev:hover,
 			.flex-direction-nav .flex-next:hover {
 				background: transparent !important;
-			}		
+			}
 		}
 
 		.product-info-wrapper {
-			width: 50%;
 			float: right;
 			max-height: 500px;
 			overflow-y: auto;
 			padding: 20px;
 			position: relative;
+			width: 50%;
 
 			@media (max-width: 600px) {
 				float: none;
@@ -156,15 +156,15 @@ a.product-quick-view-button {
 			}
 
 			.product_title {
-				text-align: left;
 				margin-bottom: 10px;
+				text-align: left;
 			}
 
 			.price {
-				margin: 15px 0;
 				color: $color__primary-accent;
 				font-family: $font__details;
 				font-size: 20px;
+				margin: 15px 0;
 
 				del {
 					opacity: 0.5;
@@ -213,6 +213,7 @@ a.product-quick-view-button {
 
 			.cart {
 				padding-bottom: 20px;
+
 				.quantity {
 					display: inline-block;
 					float: left;
@@ -332,7 +333,7 @@ a.product-quick-view-button {
 			border-width: 0 0 1px;
 			display: block;
 			padding-bottom: 30px;
-			
+
 			tr:nth-child(2n+2) {
 				background: transparent;
 			}
@@ -344,6 +345,6 @@ a.product-quick-view-button {
 			td:first-child {
 				width: auto !important;
 			}
-		}		
+		}
 	}
 }
