Added new required tags

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,8 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: siteorigin-unwind
 Tags: one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, custom-logo, featured-images, full-width-template, sticky-post, theme-options, translation-ready, blog, e-commerce
+Tested up to: 5.5
+Requires PHP: 7.3
 */
 @import "variables-site/variables-site";
 @import "mixins/mixins-master";
