Added Requires at least tag

--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@ Author URI: https://siteorigin.com/
 Theme URI: https://siteorigin.com/theme/unwind/
 Description: Unwind is a modern theme for creators. A stunning integrated posts slider, clean lines and crisp typography make it the perfect canvas for bloggers. Complete WooCommerce integration usually only found in premium themes makes Unwind ideal for selling. We know standing out from the crowd is important. Unwind now offers four header layouts and five blog layouts, making it easy to create a unique look and feel to suit your brand. Unwind is fully responsive and mobile ready, it also features a bold full screen search, smooth back to top button and integrations for all of your favourite plugins like Jetpack Infinite Scroll and Page Builder by SiteOrigin. For assistance, check out our <a href="https://siteorigin.com/unwind-documentation/">theme documentation</a> (https://siteorigin.com/unwind-documentation/) or ask a question on our <a href="https://siteorigin.com/thread/">support forum</a> (https://siteorigin.com/thread/).
 Version: dev
+Tested up to: 5.5
+Requires at least: 4.7
+Requires PHP: 7.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: siteorigin-unwind
 Tags: one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, custom-logo, featured-images, full-width-template, sticky-post, theme-options, translation-ready, blog, e-commerce
-Tested up to: 5.5
-Requires PHP: 7.3
 */
 /*--------------------------------------------------------------
 >>> IMPORTANT NOTICE:
@@ -3542,3 +3543,5 @@ object {
 .entry-video,
 .entry-image {
   margin: 0 0 35px; }
+
+/*# sourceMappingURL=sass/maps/style.css.map */
