--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -159,7 +159,7 @@
 .header-design-4 .main-navigation-bar > .container {
 	align-items: center;
 	display: flex;
-	height: calc( #{$masthead__padding} / 2 ) 0;
+	height: calc( #{$masthead__padding} / 2 );
 	justify-content: space-between;
 }
 
