--- a/sass/woocommerce/_quickview.scss
+++ b/sass/woocommerce/_quickview.scss
@@ -34,6 +34,7 @@ a.product-quick-view-button {
 		width: 100%;
 
 		@media (max-width: 1100px) {
+			height: 80%;
 			width: 85%;
 		}
 	}
@@ -57,9 +58,17 @@ a.product-quick-view-button {
 			margin: 0;
 			max-height: 500px;
 			overflow: hidden;
-			
+
 			img {
 				max-height: 500px;
+
+				@media (max-width: 600px) {
+					max-height: 300px
+				}
+			}
+
+			@media (max-width: 600px) {
+				max-height: 300px
 			}
 		}
 
@@ -71,8 +80,7 @@ a.product-quick-view-button {
 
 			@media (max-width: 600px) {
 				float: none;
-				max-height: auto;
-				overflow-y: auto;
+				overflow-y: initial;
 				width: 100%;
 			}
 
@@ -147,8 +155,8 @@ a.product-quick-view-button {
 
 			@media (max-width: 600px) {
 				float: none;
-				max-height: auto;
-				overflow-y: auto;
+				height: 50%;
+				overflow-y: initial;
 				width: 100%;
 			}
 
@@ -159,6 +167,10 @@ a.product-quick-view-button {
 			.product_title {
 				margin-bottom: 10px;
 				text-align: left;
+
+				@media (max-width: 600px) {
+					@include font-size(1.6);
+				}
 			}
 
 			.price {
