--- a/sass/woocommerce/_buttons.scss
+++ b/sass/woocommerce/_buttons.scss
@@ -13,7 +13,7 @@
 	background-color: $color__primary-accent;
 	border: 1px solid $color__primary-accent;
 	color: #fff;
-	padding: 1em 1.923em;
+	padding: 12.5px 1.666rem;
 
 	&:hover {
 		color: #fff;
