--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -64,7 +64,7 @@
 				width: 100%;
 
 				li {
-					color: $color__text-light;
+					color: $color__text-medium;
 					cursor: pointer;
 					padding: 15px 25px;
 					position: relative;
