--- a/style.css
+++ b/style.css
@@ -1310,17 +1310,17 @@ a {
     .widget #wp-calendar tbody td {
       padding-bottom: .5em;
       text-align: center; }
-  .widget #wp-calendar tfoot #prev,
-  .widget #wp-calendar tfoot #next {
-    font-size: 14.9328px;
-    font-size: 0.9333rem; }
-    .widget #wp-calendar tfoot #prev a,
-    .widget #wp-calendar tfoot #next a {
-      color: #24c48a; }
-      .widget #wp-calendar tfoot #prev a:hover,
-      .widget #wp-calendar tfoot #next a:hover {
-        color: #00a76a; }
-  .widget #wp-calendar tfoot #next {
+
+.calendar_wrap .wp-calendar-nav {
+  font-size: .875rem; }
+  .calendar_wrap .wp-calendar-nav a {
+    color: #24c48a; }
+    .calendar_wrap .wp-calendar-nav a:hover {
+      color: #00a76a; }
+  .calendar_wrap .wp-calendar-nav .wp-calendar-nav-prev {
+    float: left; }
+  .calendar_wrap .wp-calendar-nav .wp-calendar-nav-next {
+    float: right;
     text-align: right; }
 
 /*--------------------------------------------------------------
