Updated comment to title case

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -155,7 +155,7 @@
 	justify-content: center;
 }
 
-// Menu in line with logo.
+// Menu in Line With Logo.
 .header-design-4 .main-navigation-bar > .container {
 	align-items: center;
 	display: flex;
